# 3DGraphicsEngine

./: CMakeLists.txt  README.md
inc/: 3DGraphics.h  Buffer.h  Engine.h  Initializer.h  Renderer.h  Window.h
inc/forms/: cube.h
inc/initializers/: sdl_init.h  sdl_window_init.h
inc/vectors/: Vec2.h  Vec3.h  vectors.h
src/: Buffer.cpp  CMakeLists.txt  Engine.cpp  Initializer.cpp  Renderer.cpp  Window.cpp  main.cpp
src/initializers/: sdl_init.cpp  sdl_window_init.cpp
test/main/: CMakeLists.txt  ut_main.cpp
